[gd_scene load_steps=4 format=3 uid="uid://crpfa464wq7u0"]

[ext_resource type="Theme" uid="uid://db5y4jox5gcwj" path="res://Theme.tres" id="1_85k3b"]
[ext_resource type="Texture2D" uid="uid://d2ihgbomvj4sx" path="res://assets/images/Screenshot 2024-06-16 032723.png" id="2_8qw6d"]
[ext_resource type="Script" path="res://Scripts/Home.gd" id="2_i1v0y"]

[node name="Home" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_85k3b")
script = ExtResource("2_i1v0y")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 16.0
offset_right = 101.0
offset_bottom = 39.0
text = "GAME TITLE"

[node name="Play" type="Button" parent="."]
layout_mode = 0
offset_left = 12.0
offset_top = 43.0
offset_right = 84.0
offset_bottom = 60.0
text = "Play"
alignment = 0

[node name="Controls" type="Button" parent="."]
layout_mode = 0
offset_left = 12.0
offset_top = 65.0
offset_right = 84.0
offset_bottom = 82.0
text = "Controls"
alignment = 0

[node name="Exit" type="Button" parent="."]
layout_mode = 0
offset_left = 12.0
offset_top = 87.0
offset_right = 84.0
offset_bottom = 104.0
text = "Exit"
alignment = 0

[node name="Screenshot2024-06-16032723" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.203922)
position = Vector2(150, 78)
scale = Vector2(0.101736, 0.0744681)
texture = ExtResource("2_8qw6d")

[connection signal="button_up" from="Play" to="." method="_on_play_button_up"]
[connection signal="button_up" from="Controls" to="." method="_on_controls_button_up"]
[connection signal="button_up" from="Exit" to="." method="_on_exit_button_up"]
